# fun-with-rust

./: Cargo.toml
src/: bac.rs  fib.rs  file_read.rs  problem2.rs  test.txt
