[package]
name = "fun-with-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bac"
path = "src/bac.rs"

[[bin]]
name = "problem2"
path = "src/problem2.rs"

[[bin]]
name = "file_read"
path = "src/file_read.rs"

[dependencies]
